--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.4"
 
 services:
   backend:
@@ -18,11 +18,18 @@ services:
     command: sh script/run.sh
     env_file: test.env
     volumes:
-      - media-files:/app/project/media
+      - mediafiles:/app/project/media
   
   redis:
     restart: always
     image: redis:6.2.2-alpine
 
 volumes:
-  media-files:
+  mediafiles:
+    name: mediafiles
+    external: true
+
+networks:
+  default:
+    external:
+      name: ddd_network
