--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -15,6 +15,8 @@ services:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
       - POSTGRES_DB
+      - DBPOOL_HOST
+      - DBPOOL_PORT
     command: sh script/run.sh
     env_file: test.env
     volumes:
