added DBPOOL configs to test

--- a/test.env
+++ b/test.env
@@ -6,5 +6,5 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 POSTGRES_PORT=5432
-DBPOOL_HOST=
-DBPOOL_PORT=
+DBPOOL_HOST=dbpool
+DBPOOL_PORT=6432
