test secret_key must be inside double quotes

--- a/dev.env
+++ b/dev.env
@@ -1,5 +1,5 @@
 DEBUG=True
-SECRET_KEY=django-insecure-3um(*k-q8wl4@so)7p=b%s*ao$id1y1@i+5@8x85$cuj)stoa5
+SECRET_KEY="django-insecure-3um(*k-q8wl4@so)7p=b%s*ao$id1y1@i+5@8x85$cuj)stoa5"
 ALLOWED_HOSTS=*
 CORS_ORIGIN_ALLOW_ALL=True
 POSTGRES_USER=postgres
