POSTGRES_HOST added to dev and test envs

--- a/dev.env
+++ b/dev.env
@@ -6,5 +6,6 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 POSTGRES_PORT=5443
+POSTGRES_HOST=localhost
 DBPOOL_HOST=
 DBPOOL_PORT=
