--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -18,14 +18,11 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: build docker image
-        run: |
-          docker build -t ghcr.io/dedogmadao/dt-backend/backend_production:latest .
+        run: docker build -t ghcr.io/dedogmadao/dt-backend/backend_production:latest .
         
       - name: push docker image to package registry
-      - run: |
-          docker login ghcr.io -u dedogmadao -p $GITHUB_TOKEN
-      - run: |
-          docker push ghcr.io/dedogmadao/dt-backend/backend_production:latest
+      - run: docker login ghcr.io -u dedogmadao -p $GITHUB_TOKEN
+      - run: docker push ghcr.io/dedogmadao/dt-backend/backend_production:latest
 
 
   deploy:
