--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -3,7 +3,7 @@ version: "3.4"
 services:
   backend:
     restart: always
-    image: "ghcr.io/dedogmadao/dt-backend/${REPOSITORY_NAME}:${BRANCH}-latest"
+    image: "ghcr.io/dedogmadao/${REPOSITORY_NAME}/${REPOSITORY_NAME}:${BRANCH}-latest"
     environment:
       - DEBUG
       - SECRET_KEY
@@ -18,6 +18,27 @@ services:
       - DBPOOL_HOST
       - DBPOOL_PORT
     command: sh /app/project/scripts/run.sh
+    volumes:
+      - staticfiles:/app/project/static
+      - mediafiles:/app/project/media
+  
+  celery:
+    restart: always
+    image: "ghcr.io/dedogmadao/${REPOSITORY_NAME}/${REPOSITORY_NAME}:${BRANCH}-latest"
+    environment:
+      - DEBUG
+      - SECRET_KEY
+      - ALLOWED_HOSTS
+      - CORS_ORIGIN_ALLOW_ALL
+      - CORS_ORIGIN_WHITELIST
+      - POSTGRES_HOST
+      - POSTGRES_PORT
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_DB
+      - DBPOOL_HOST
+      - DBPOOL_PORT
+    command: sh /app/project/scripts/celery.sh
     volumes:
       - staticfiles:/app/project/static
       - mediafiles:/app/project/media
