--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -38,7 +38,7 @@ services:
       - POSTGRES_DB
       - DBPOOL_HOST
       - DBPOOL_PORT
-    command: sh /app/project/scripts/celery.sh
+    command: cd src && sh /app/project/scripts/celery.sh
     volumes:
       - staticfiles:/app/project/static
       - mediafiles:/app/project/media
