--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -38,7 +38,8 @@ services:
       - POSTGRES_DB
       - DBPOOL_HOST
       - DBPOOL_PORT
-    command: cd src && sh /app/project/scripts/celery.sh
+    command: sh /app/project/scripts/celery.sh
+    working_dir: /app/project/src/
     volumes:
       - staticfiles:/app/project/static
       - mediafiles:/app/project/media
